syntax = "proto3";

package adventar.v1;
import "adventar/v1/resources.proto";

message ListCalendarsRequest {
  int32 year = 1;
  int64 user_id = 2;
  string query = 3;
  int32 page_size = 4;
  // string page_token = 5;
}

message ListCalendarsResponse {
  repeated Calendar calendars = 1;
  // string next_page_token = 2;
}

message GetCalendarRequest { int64 calendar_id = 1; }

message GetCalendarResponse {
  Calendar calendar = 1;
  repeated Entry entries = 2;
}

message CreateCalendarRequest {
  string title = 1;
  string description = 2;
}

message UpdateCalendarRequest {
  int64 calendar_id = 1;
  string title = 2;
  string description = 3;
}

message DeleteCalendarRequest { int64 calendar_id = 1; }

message ListCalendarStatsRequest {}

message ListCalendarStatsResponse {
  repeated CalendarStat calendar_stats = 1;
}

message ListEntriesRequest {
  int64 user_id = 1;
  int32 year = 2;
}

message ListEntriesResponse { repeated Entry entries = 1; }

message CreateEntryRequest {
  int64 calendar_id = 1;
  int32 day = 2;
}

message UpdateEntryRequest {
  int64 entry_id = 1;
  string comment = 2;
  string url = 3;
}

message DeleteEntryRequest { int64 entry_id = 1; }

message SignInRequest {
  string jwt = 1;
  string icon_url = 2;
}

message GetUserRequest { int64 user_id = 1; }

message UpdateUserRequest { string name = 1; }

message HealthCheckRequest {}

message HealthCheckResponse {
  string state = 1;
}
